# exploration_robot

./: LICENSE  README.md
navegacao/: CMakeLists.txt  package.xml
navegacao/include/navegacao/: my_node.h
navegacao/src/: slam.cpp  tele_operation.cpp
turtlebot3_description/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger_for_autorace.gazebo.xacro  turtlebot3_burger_for_autorace.urdf.xacro  turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle_pi.gazebo.xacro  turtlebot3_waffle_pi_for_open_manipulator.gazebo.xacro
turtlebot3_gazebo/worlds/: turtlebot3_autorace.world
turtlebot3_slam/src/: flat_world_imu_node.cpp
